# babblewitz

./: .gitignore  .taplo.toml  Cargo.toml  README.md
.cargo/: config.toml
.config/: mise.toml
.github/workflows/: ci.yml  validation.yml
babblewitz-cli/: Cargo.toml
babblewitz-cli/src/: main.rs
babblewitz-cli/src/commands/: build.rs  mod.rs  sync_assets.rs
babblewitz-cli/src/commands/tasks/: can_parse.rs  deserialization.rs  mod.rs
babblewitz-cli/src/core/: common.rs  config.rs  corpus.rs  executor.rs  implementation.rs  mod.rs  savefile.rs
corpus/game/: 001-only-comment.txt  002-scalars.txt  003-objects.txt  004-arrays.txt  005-lists.txt  006-hsv.txt  007-hsv4.txt  008-windows-1252.txt  009-utf8.txt  010-variables.txt  011-expressions.txt  012-order-of-operations.txt  013-keys.txt  014-escape-codes.txt  015-escape-quotes.txt  016-multiline.txt  017-boundaries.txt  018-implicit-assignment.txt  019-empty-block.txt  020-empty-keys.txt  021-mixed-object.txt  022-mixed-array.txt  023-mixed.txt  024-list-list.txt  025-utf8-bom.txt  026-extraneous-close.txt  027-missing-close.txt  028-semicolons.txt  029-array-of-objects.txt  030-operators.txt  031-parameters.txt  032-object-template.txt
impls/jomini-reader/: Cargo.toml  babblewitz.config.toml
impls/jomini-reader/src/: main.rs
impls/jomini-tape/: Cargo.toml  babblewitz.config.toml
impls/jomini-tape/src/: main.rs
schema/: babblewitz-config.schema.json
