[workspace]
members = ["babblewitz-cli", "impls/jomini-reader", "impls/jomini-tape"]
default-members = ["babblewitz-cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }
rawzip = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
tempfile = "3.20"
toml = "0.8.23"
