[package]
name = "babblewitz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
flate2 = { workspace = true }
rawzip = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
toml = { workspace = true }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = { workspace = true }
